--- a/style.css
+++ b/style.css
@@ -1,35 +1,54 @@
 /*CSS reset settings here*/
-*{
+* {
     margin: 0px;
     padding: 0px;
-   }
-   #wrapper{
+}
+#wrapper {
     width: 950px;
     background-color: silver;
     margin: 0px auto;
-   }
-   #header{
+    padding: 15px;
+}
+#header {
     min-height: 150px;
     background-color: green;
-   }
-   #navigation{
+    margin-bottom: 15px;
+}
+#navigation {
     min-height: 300px;
     width: 200px;
     background-color: blue;
-   }
-   #main_content{
+    margin: 0px;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 15px;
+}
+#main_content {
     min-height: 400px;
     width: 700px;
     background-color: red;
-   }
-   .subcontents{
+    display: inline-block;
+    /* text-align: right; */
+    /* margin-right: 10px; */
+    /* margin-right: 0px; */
+    /* margin-left: auto; */
+    padding: 15px;
+}
+.subcontents {
     min-height: 200px;
     width: 210px;
+    display: inline-block;
+    /* justify-content: space-evenly; */
+    vertical-align: top;
     background-color: yellow;
-   }
-   #advertisement{
+    margin: 5px;
+    /* align-self: center; */
+}
+#advertisement {
     min-height: 120px;
     width: 660px;
+    display: inline-block;
     background-color: purple;
-   }
-   
+    margin-top: 20px;
+    margin-left: 5px;
+}
